# try-cupcake

example/: CMakeLists.txt  conanfile.py
example/include/example/: example.hpp
example/src/: example.cpp  libexample.cpp
example/tests/: CMakeLists.txt  example.cpp
pig-latin/: conanfile.py  cupcake.json
pig-latin/include/pig-latin/: pig-latin.hpp
pig-latin/src/: libpig-latin.cpp  pig-latin.cpp
pig-latin/tests/: pig-latin.cpp
second/: conanfile.py  cupcake.json
second/include/second/: second.hpp
second/src/: libsecond.cpp  second.cpp
second/tests/: second.cpp
seedgen/: CMakeLists.txt  conanfile.py
seedgen/include/seedgen/: seedgen.hpp
seedgen/src/: libseedgen.cpp  seedgen.cpp
seedgen/tests/: CMakeLists.txt  seedgen.cpp
third/: conanfile.py  cupcake.json
third/include/third/: third.hpp
third/src/: libthird.cpp  third.cpp
third/tests/: third.cpp
